# headlessAIAgentPlatform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_en.md  REQUIREMENTS.md  TRACKING.md  demo_full_test.py  docker-compose.yml  package-lock.json  pyproject.toml  test_e2e.js
.claude/: settings.local.json
console/: index.html  package-lock.json  package.json
console/src/: App.tsx  api.ts  main.tsx
console/src/i18n/: en.json  index.ts  zh.json
console/src/pages/: AgentsPage.tsx  AuditPage.tsx  (+9 more)
examples/: community_agent.json
server/: config.py  db.py  exceptions.py  main.py  performance_presets.py  runtime_config.py
server/api/: agent_capabilities.py  agent_connections.py  agent_skills.py  agents.py  audit.py  auth.py  invoke.py  knowledge.py  llm_configs.py  mock_tools.py  performance.py  skills.py  tools.py  vector_admin.py  workflows.py
server/engine/: agent_runtime.py  audit_logger.py  circuit_breaker.py  knowledge_retriever.py  llm_adapter.py  pgvector_store.py  rule_evaluator.py  tool_gateway.py  vector_adapter.py  vector_store.py  workflow_executor.py
server/middleware/: __init__.py  auth.py
server/models/: __init__.py  agent.py  agent_connection.py  agent_skill.py  audit.py  knowledge.py  llm_config.py  session.py  skill.py  tool.py  user.py  workflow.py
server/schemas/: agent.py  auth.py  invoke.py  knowledge.py  skill.py  tool.py  workflow.py
tests/: test_rag_pipeline.py  test_workflow_validator.py
tests/e2e/: setup_test_data.py  test_e2e_invoke.py  test_e2e_rag_upgrade.py
tests/test_data/: property_management.txt
(+23 files in other folders)
